# climate_risks_esg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/manifests/cmip6_wget/: wget_script_2026-5-7_13-52-45.sh  wget_script_2026-5-7_13-52-56.sh  wget_script_2026-5-7_13-53-12.sh  wget_script_2026-5-7_13-53-19.sh  wget_script_2026-5-7_13-53-27.sh  wget_script_2026-5-7_13-53-3.sh  wget_script_2026-5-7_13-53-37.sh  wget_script_2026-5-7_13-53-45.sh  wget_script_2026-5-7_13-53-54.sh  wget_script_2026-5-7_13-54-4.sh
docs/adrs/: 0001-monorepo-proprietario.md  0002-no-docker-local.md  0003-prefect-em-vez-de-airflow.md  0004-piloto-n2-deep-dive.md  0005-perfil-hazard-joinville.md  README.md
docs/architecture/: estado-atual.md  fontes-de-dados.md
docs/planning/: azure-boards-import.csv  backlog-sprints.md  entregaveis-e-gaps.md  plano-melhoria-ifrs-ml.json
docs/source/: info.md  project.md
infra/docker/: Dockerfile.api  Dockerfile.frontend  api-entrypoint.sh  init-db.sql  nginx.conf
infra/local/: README.md  init_db.sh  reset_db.sh  setup_postgres.sh
pipelines/deployments/: prefect.yaml
pipelines/flows/: compute_scores.py  ingest_cmip6.py
src/climate_esg/: __init__.py  config.py  logging.py
src/climate_esg/api/: __init__.py  deps.py  main.py  services.py
src/climate_esg/api/routes/: __init__.py  companies.py  search.py
src/climate_esg/api/schemas/: __init__.py  scores.py
src/climate_esg/cli/: __init__.py  main.py
src/climate_esg/db/: __init__.py  base.py  models.py  seed.py
src/climate_esg/db/migrations/: env.py
src/climate_esg/db/migrations/versions/: 0001_initial_star_schema.py  0002_fact_score_explanation.py  0003_fact_hazard_exposure.py  0004_fact_financial_impact.py  0005_grain_uniques_and_cache.py  0006_company_market_cap.py  0007_company_financials.py  0008_asset_ibge_code.py  0009_cvm_financials_by_cnpj.py  0010_cvm_balance_sheet.py  0011_run_status.py  0012_check_constraints.py
src/climate_esg/geospatial/: __init__.py  exposure.py  regions.py
src/climate_esg/governance/: __init__.py  audit.py  lineage.py  model_cards.py
src/climate_esg/ingestion/: __init__.py  adaptabrasil.py  b3_universe.py  cf_validation.py  cnae_value_chain.py  cvm.py  esgf_client.py  geocoding.py  http.py  ibge.py  market_data.py  netcdf_loader.py  news_collector.py  procurement.py
src/climate_esg/modeling/: __init__.py  analytics.py  anomaly.py  climate_financial.py  climate_indices.py  explanation.py  features.py  financial_impact.py  peers.py  physical_config.py  physical_risk.py  scoring.py  supply_chain.py  transition_config.py  transition_risk.py
src/climate_esg/nlp/: __init__.py
src/climate_esg/quality/: boundaries.py  checks.py
src/climate_esg/search/: dossier.py
src/climate_esg/utils/: __init__.py  storage.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  api.ts  index.css  main.tsx
src/frontend/src/components/: AssetMap.tsx  CompanyAnalytics.tsx  CompareChart.tsx  Heatmap.tsx  MiniLocationMap.tsx  Narrative.tsx  Relationships.tsx  ScoreCard.tsx  SearchPanel.tsx  SubScores.tsx  util.ts
tests/: conftest.py
tests/integration/: test_api_scores.py  test_compute_scores_empty.py
tests/unit/: test_analytics.py  test_cf_validation.py  test_climate_financial.py  test_cvm_parsing.py  test_dossier_classify.py  test_esgf_parser.py  test_explanation.py  test_geocoding.py  test_lineage.py  test_market_data.py  test_physical_risk.py  test_regions.py  test_scoring.py  test_scoring_properties.py  test_seed_idempotent.py  test_supply_chain.py  test_transition_risk.py
